--- a/us_soc/soc_application.Rmd
+++ b/us_soc/soc_application.Rmd
@@ -392,7 +392,7 @@ long <- us_soc$long
 lat <- us_soc$lat
 y <- us_soc$soc
 
-inla_range <- min( diff(range(long)), diff(range(lat)) ) / sqrt(length(long)) * 5
+inla_range <- min( diff(range(long)), diff(range(lat)) ) / sqrt(length(long)) * 3
 
 for (curr_index in 1:num_fold) {
   train_index <- which(train_index_all != curr_index)
@@ -496,10 +496,10 @@ write.csv(as.data.frame(loss_all),here::here("us_soc/soc_loss.csv"),row.names = 
 
 loss_all <- read.csv(here::here("us_soc/soc_loss.csv"))
 
-write.csv(as.data.frame(pred_dnn),"D:/77/Reasearch/temp/dnn_pred_soc.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_dk),"D:/77/Reasearch/temp/dk_pred_soc.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_ck),"D:/77/Reasearch/temp/ck_pred_soc.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_inla),"D:/77/Reasearch/temp/inla_pred_soc.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_dnn),"D:/77/Research/temp/dnn_pred_soc.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_dk),"D:/77/Research/temp/dk_pred_soc.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_ck),"D:/77/Research/temp/ck_pred_soc.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_inla),"D:/77/Research/temp/inla_pred_soc.csv",row.names = FALSE)
 
 
 ```
@@ -532,10 +532,10 @@ crps <- function(prediction_matrix, true_value){
   return(-res)
 }
 
-pred_dnn <- as.matrix(read.csv("D:/77/Reasearch/temp/dnn_pred_soc.csv"))
-pred_dk <- as.matrix(read.csv("D:/77/Reasearch/temp/dk_pred_soc.csv"))
-pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/ck_pred_soc.csv"))
-pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/inla_pred_soc.csv"))
+pred_dnn <- as.matrix(read.csv("D:/77/Research/temp/dnn_pred_soc.csv"))
+pred_dk <- as.matrix(read.csv("D:/77/Research/temp/dk_pred_soc.csv"))
+pred_ck <- as.matrix(read.csv("D:/77/Research/temp/ck_pred_soc.csv"))
+pred_inla <- as.matrix(read.csv("D:/77/Research/temp/inla_pred_soc.csv"))
 
 
 
@@ -544,15 +544,15 @@ crps_dk_all <- crps(pred_dk,y)
 crps_ck_all <- crps(pred_ck,y)
 crps_inla_all <- crps(pred_inla,y)
 
-# write.csv(crps_dnn_all,"D:/77/Reasearch/temp/crps_dnn_soc.csv",row.names = FALSE)
-# write.csv(crps_dk_all,"D:/77/Reasearch/temp/crps_dk_soc.csv",row.names = FALSE)
-# write.csv(crps_ck_all,"D:/77/Reasearch/temp/crps_ck_soc.csv",row.names = FALSE)
-# write.csv(crps_inla_all,"D:/77/Reasearch/temp/crps_inla_soc.csv",row.names = FALSE)
+write.csv(crps_dnn_all,"D:/77/Research/temp/crps_dnn_soc.csv",row.names = FALSE)
+write.csv(crps_dk_all,"D:/77/Research/temp/crps_dk_soc.csv",row.names = FALSE)
+write.csv(crps_ck_all,"D:/77/Research/temp/crps_ck_soc.csv",row.names = FALSE)
+write.csv(crps_inla_all,"D:/77/Research/temp/crps_inla_soc.csv",row.names = FALSE)
 
-crps_dnn_all <- as.matrix(read.csv("D:/77/Reasearch/temp/crps_dnn_soc.csv"))
-crps_dk_all <- as.matrix(read.csv("D:/77/Reasearch/temp/crps_dk_soc.csv"))
-crps_ck_all <- as.matrix(read.csv("D:/77/Reasearch/temp/crps_ck_soc.csv"))
-crps_inla_all <- as.matrix(read.csv("D:/77/Reasearch/temp/crps_inla_soc.csv"))
+crps_dnn_all <- as.matrix(read.csv("D:/77/Research/temp/crps_dnn_soc.csv"))
+crps_dk_all <- as.matrix(read.csv("D:/77/Research/temp/crps_dk_soc.csv"))
+crps_ck_all <- as.matrix(read.csv("D:/77/Research/temp/crps_ck_soc.csv"))
+crps_inla_all <- as.matrix(read.csv("D:/77/Research/temp/crps_inla_soc.csv"))
 
 print(paste("CRPS of DNN is: ", mean(crps_dnn_all)))
 print(paste("CRPS of DK is: ", mean(crps_dk_all)))
@@ -597,10 +597,10 @@ int_score_ck <- all_interval_score(prediction_sample = pred_ck, true_x = y)
 int_score_inla <- all_interval_score(prediction_sample = pred_inla, true_x = y)
 
 
-# write.csv(int_score_dnn,"D:/77/Reasearch/temp/int_dnn_soc.csv",row.names = FALSE)
-# write.csv(int_score_dk,"D:/77/Reasearch/temp/int_dk_soc.csv",row.names = FALSE)
-# write.csv(int_score_ck,"D:/77/Reasearch/temp/int_ck_soc.csv",row.names = FALSE)
-# write.csv(int_score_inla,"D:/77/Reasearch/temp/int_inla_soc.csv",row.names = FALSE)
+# write.csv(int_score_dnn,"D:/77/Research/temp/int_dnn_soc.csv",row.names = FALSE)
+# write.csv(int_score_dk,"D:/77/Research/temp/int_dk_soc.csv",row.names = FALSE)
+# write.csv(int_score_ck,"D:/77/Research/temp/int_ck_soc.csv",row.names = FALSE)
+# write.csv(int_score_inla,"D:/77/Research/temp/int_inla_soc.csv",row.names = FALSE)
 
 
 print(paste("Interval Score of DNN is: ", mean(int_score_dnn)))
