--- a/other_dataset/satellite/Sat_Application.Rmd
+++ b/other_dataset/satellite/Sat_Application.Rmd
@@ -39,36 +39,37 @@ long <- sat_dat$long
 lat <- sat_dat$lat
 y <- sat_dat$y
 
- #use_index <- which(lat <= 36.5 & lat >= 34 & long <= -92 & long >= -93 )
- # long <- long[use_index]
- # lat <- lat[use_index]
- # y <- y[use_index]
- # sat_dat <- sat_dat[use_index,]
- coordinates(sat_dat) <- ~ long + lat
- 
- 
+
+coordinates(sat_dat) <- ~ long + lat
+grid_res <- 200
+# Parameters setting
+set.seed(0)
 num_fold <- 5
 num_sample <- 100
 pred_drop <- 0.1
-
-
-
-set.seed(0)
 train_index_all <- sample(1:num_fold, length(y), replace = T)
-
 
 pred_dnn <- matrix(NA,nrow = length(y), ncol = num_sample)
 pred_dk <- matrix(NA,nrow = length(y), ncol = num_sample)
 pred_ck <- matrix(NA,nrow = length(y), ncol = num_sample)
 pred_inla <- matrix(NA,nrow = length(y), ncol = num_sample)
 
+pred_dnn_g <- matrix(NA, nrow = grid_res^2, ncol = num_sample)
+pred_dk_g <- matrix(NA, nrow = grid_res^2, ncol = num_sample)
+pred_ck_g <- matrix(NA, nrow = grid_res^2, ncol = num_sample)
+pred_inla_g <- matrix(NA, nrow = grid_res^2, ncol = num_sample)
+
+grid_long <- seq(from = min(long), to = max(long), length.out = grid_res)
+grid_lat <- seq(from = min(lat), to = max(lat), length.out = grid_res)
+
+g_long <- expand.grid(grid_long, grid_lat)[,1]
+g_lat <- expand.grid(grid_long,grid_lat)[,2]
+
 ```
 
 
 ```{r}
 # Basis Function Generation
-
-
 gridbasis1 <- auto_basis(mainfold = plane(), data = sat_dat, nres = 1, type = "Gaussian", regular = 1)
 gridbasis2 <- auto_basis(mainfold = plane(), data = sat_dat, nres = 2, type = "Gaussian", regular = 1)
 gridbasis3 <- auto_basis(mainfold = plane(), data = sat_dat, nres = 3, type = "Gaussian", regular = 1)
@@ -79,46 +80,73 @@ show_basis(gridbasis3) +
   ylab("Latitude")
 
 basis_1 <- matrix(NA, nrow = nrow(sat_dat), ncol = length(gridbasis1@fn))
-
-
 for (i in 1:length(gridbasis1@fn)) {
   basis_1[,i] <- gridbasis1@fn[[i]](coordinates(sat_dat))
 }
+
+basis_1_g <- matrix(NA, nrow = nrow(cbind(g_long, g_lat)), ncol = length(gridbasis1@fn))
+for (i in 1:length(gridbasis1@fn)) {
+  basis_1_g[,i] <- gridbasis1@fn[[i]](coordinates(cbind(g_long, g_lat)))
+}
+
 
 basis_2 <- matrix(NA, nrow = nrow(sat_dat), ncol = length(gridbasis2@fn))
 for (i in 1:length(gridbasis2@fn)) {
   basis_2[,i] <- gridbasis2@fn[[i]](coordinates(sat_dat))
 }
 
+basis_2_g <- matrix(NA, nrow = nrow(cbind(g_long, g_lat)), ncol = length(gridbasis2@fn))
+for (i in 1:length(gridbasis2@fn)) {
+  basis_2_g[,i] <- gridbasis2@fn[[i]](coordinates(cbind(g_long, g_lat)))
+}
+
+
+
 basis_3 <- matrix(NA, nrow = nrow(sat_dat), ncol = length(gridbasis3@fn))
 for (i in 1:length(gridbasis3@fn)) {
-   basis_3[,i] <- gridbasis3@fn[[i]](coordinates(sat_dat))
- }
+  basis_3[,i] <- gridbasis3@fn[[i]](coordinates(sat_dat))
+}
+
+basis_3_g <- matrix(NA, nrow = nrow(cbind(g_long, g_lat)), ncol = length(gridbasis3@fn))
+for (i in 1:length(gridbasis3@fn)) {
+  basis_3_g[,i] <- gridbasis3@fn[[i]](coordinates(cbind(g_long, g_lat)))
+}
 
 
 # Redefine three layers of basis images
-basis_use_1_2d <- basis_3[,1:ncol(basis_1)]
-
+basis_use_1_2d <- basis_1
 basis_use_2_2d <- basis_3[,(ncol(basis_1)+1):ncol(basis_2)]
-
 basis_use_3_2d <- basis_3[,(ncol(basis_2)+1):ncol(basis_3)]
+
+basis_use_1_2d_g <- basis_1_g
+basis_use_2_2d_g <- basis_3_g[,(ncol(basis_1_g)+1):ncol(basis_2_g)]
+basis_use_3_2d_g <- basis_3_g[,(ncol(basis_2_g)+1):ncol(basis_3_g)]
+
 
 # First resolution
 shape_row_1 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 1) , 2 ]))
 shape_col_1 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 1) , 1 ]))
-basis_arr_1 <-  array(NA, dim = c(nrow(sat_dat), shape_row_1, shape_col_1))
+basis_arr_1 <- array(NA, dim = c(nrow(sat_dat), shape_row_1, shape_col_1))
+basis_arr_1_g <- array(NA, dim = c(length(g_long), shape_row_1, shape_col_1))
 
 for (i in 1:nrow(sat_dat)) {
   basis_arr_1[i,,] <- matrix(basis_use_1_2d[i,], nrow = shape_row_1, ncol = shape_col_1, byrow = T)
+}
+
+for (i in 1:length(g_long)) {
+  basis_arr_1_g[i,,] <- matrix(basis_use_1_2d_g[i,], nrow = shape_row_1, ncol = shape_col_1, byrow = T)
 }
 
 # Second resolution
 shape_row_2 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 2) , 2 ]))
 shape_col_2 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 2) , 1 ]))
 basis_arr_2 <- array(NA, dim = c(nrow(sat_dat), shape_row_2, shape_col_2))
-
+basis_arr_2_g <- array(NA, dim = c(length(g_long), shape_row_2, shape_col_2))
 for (i in 1:nrow(sat_dat)) {
   basis_arr_2[i,,] <- matrix(basis_use_2_2d[i,], nrow = shape_row_2, ncol = shape_col_2, byrow = T)
+}
+for (i in 1:length(g_long)) {
+  basis_arr_2_g[i,,] <- matrix(basis_use_2_2d_g[i,], nrow = shape_row_2, ncol = shape_col_2, byrow = T)
 }
 
 
@@ -126,17 +154,23 @@ for (i in 1:nrow(sat_dat)) {
 shape_row_3 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 3) , 2 ]))
 shape_col_3 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 3) , 1 ]))
 basis_arr_3 <- array(NA, dim = c(nrow(sat_dat), shape_row_3, shape_col_3))
-
+basis_arr_3_g <- array(NA, dim = c(length(g_long), shape_row_3, shape_col_3))
 for (i in 1:nrow(sat_dat)) {
   basis_arr_3[i,,] <- matrix(basis_use_3_2d[i,], nrow = shape_row_3, ncol = shape_col_3, byrow = T)
+}
+for (i in 1:length(g_long)) {
+  basis_arr_3_g[i,,] <- matrix(basis_use_3_2d_g[i,], nrow = shape_row_3, ncol = shape_col_3, byrow = T)
 }
 
 pred_drop_layer <- layer_dropout(rate=pred_drop)
 
+
 ```
+
 #DNN
 
 ```{r}
+sat_dat <- data.frame(long = long, lat = lat, y = y)  
 
 for (curr_index in 1:num_fold) {
   train_index <- which(train_index_all != curr_index)
@@ -173,7 +207,7 @@ model_dnn %>% compile(
   metrics = list("mse")
 )
   model_checkpoint <- callback_model_checkpoint(
-  filepath = "D:/77/research/temp/best_weights.h5",
+  filepath = "D:/77/research/temp/sat_best_weights_dnn.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -181,10 +215,10 @@ model_dnn %>% compile(
 )
   
 mod_train_dnn <- model_dnn %>%
-  fit(x = x_tr, y = y_tr, epochs = 1000, batch_size = 1000, 
+  fit(x = x_tr, y = y_tr, epochs = 1000, batch_size = 5000, 
       validation_data = list(x_te, y_te) , callbacks = list(model_checkpoint))
 
-model_dnn %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
+model_dnn %>% load_model_weights_hdf5("D:/77/research/temp/sat_best_weights_dnn.h5")
 
 
 for (j in 1:num_sample) {
@@ -195,6 +229,16 @@ for (j in 1:num_sample) {
 
 }
 
+# Gridwise Prediction
+
+s_long <- (g_long- min(long))/diff(range(long))
+s_lat <- (g_lat - min(lat))/diff(range(lat))
+
+
+for (j in 1:num_sample) {
+  print(j)
+  pred_dnn_g[,j] <- predict(model_dnn, cbind(s_long, s_lat))
+}
 
 
 ```
@@ -202,20 +246,11 @@ for (j in 1:num_sample) {
 # Deep Kriging
 
 ```{r}
-
 for (curr_index in 1:num_fold) {
   
   train_index <- which(train_index_all != curr_index)
-  basis_tr_1  <- basis_1[train_index,]
-  basis_te_1  <- basis_1[-train_index,]
-  
-  basis_tr_2  <- basis_2[train_index,]
-  basis_te_2  <- basis_2[-train_index,]
-  
-  basis_tr_3  <- basis_3[train_index,]
-  basis_te_3  <- basis_3[-train_index,]
-  x_tr <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[train_index,],basis_tr_1, basis_tr_2, basis_tr_3)
-  x_te <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[-train_index,],basis_te_1, basis_te_2, basis_te_3)
+  x_tr <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[train_index,], basis_1[train_index,],  basis_2[train_index,],  basis_3[train_index,])
+  x_te <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[-train_index,],basis_1[-train_index,],  basis_2[-train_index,],  basis_3[-train_index,])
 
   y_tr <- y[train_index]
   y_te <- y[-train_index]
@@ -246,7 +281,7 @@ model_dk %>% compile(
 )
 
   model_checkpoint <- callback_model_checkpoint(
-  filepath = "D:/77/research/temp/best_weights.h5",
+  filepath = "D:/77/research/temp/sat_best_weights_dk.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -255,11 +290,11 @@ model_dk %>% compile(
   
   
 mod_train_dk <- model_dk %>%
-  fit(x = x_tr, y = y_tr, epochs = 1000, batch_size = 1000, 
+  fit(x = x_tr, y = y_tr, epochs =1000, batch_size = 5000, 
       validation_data = list(x_te, y_te) , callbacks = model_checkpoint)
 
 
-model_dk %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
+model_dk %>% load_model_weights_hdf5("D:/77/research/temp/sat_best_weights_dk.h5")
 
 
 for (j in 1:num_sample) {
@@ -268,6 +303,15 @@ for (j in 1:num_sample) {
 }
 
 }
+
+
+for (j in 1:num_sample) {
+  print(j)
+  pred_dk_g[,j] <- predict(model_dk,cbind((g_long- min(long))/diff(range(long)), (g_lat - min(lat))/diff(range(lat)) ,basis_1_g, basis_2_g, basis_3_g))
+}
+
+
+
 
 ```
 
@@ -286,8 +330,8 @@ basis_te_1 <- array_reshape(basis_arr_1[-train_index,,], c(length(y) - length(tr
 basis_te_2 <- array_reshape(basis_arr_2[-train_index,,], c(length(y) - length(train_index), shape_row_2, shape_col_2, 1))
 basis_te_3 <- array_reshape(basis_arr_3[-train_index,,], c(length(y) - length(train_index), shape_row_3, shape_col_3, 1))
 
-cov_tr <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat)) )[train_index,]
-cov_te <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat)) )[-train_index,]
+cov_tr <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat)))[train_index,]
+cov_te <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat)))[-train_index,]
 
 # We need three convolutional input model and adding covariates.
 input_basis_1 <- layer_input(shape = c(shape_row_1, shape_col_1, 1))
@@ -359,7 +403,7 @@ model_ck %>% compile(
 )
 
  model_checkpoint <- callback_model_checkpoint(
-  filepath = "D:/77/research/temp/best_weights.h5",
+  filepath = "D:/77/research/temp/sat_best_weights_ck.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -370,12 +414,12 @@ mod_train_ck <- model_ck %>% fit(
   x = list(basis_tr_1, basis_tr_2, basis_tr_3, cov_tr),
   y = y[train_index],
   epochs=1000,
-  batch_size=2000,
+  batch_size=1000,
   validation_data=list(list(basis_te_1,basis_te_2,basis_te_3,cov_te), y[-train_index]),
   callbacks = model_checkpoint, shuffle = TRUE
 )
 
-model_ck %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
+model_ck %>% load_model_weights_hdf5("D:/77/research/temp/sat_best_weights_ck.h5")
 
  for (j in 1:num_sample) {
   print(j)
@@ -385,6 +429,10 @@ model_ck %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 }
 
 
+for (j in 1:num_sample) {
+  print(j)
+  pred_ck_g[,j] <- predict(model_ck, list(basis_arr_1_g, basis_arr_2_g, basis_arr_3_g, cbind((g_long- min(long))/diff(range(long)), (g_lat - min(lat))/diff(range(lat)))))
+}
 
 
 ```
@@ -397,19 +445,22 @@ library(rSPDE)
 library(gridExtra)
 library(lattice)
 
+# 
 # ml_idx <- sample(1:length(long), 2000)
-# ml_res <- likfit(coords = cbind(long[ml_idx], lat[ml_idx]), data = y[ml_idx], ini.cov.pars = c(var(y)/2,sort(unique(diff(long)))[2]))
-inla_range <- min( diff(range(long)), diff(range(lat)) ) / sqrt(length(long)) * 5
+# ml_res <- likfit(coords = cbind(long[ml_idx], lat[ml_idx]), data = y[ml_idx], ini.cov.pars = c(var(y)/2,min(abs(diff(long)))))
+
+inla_range <- min( diff(range(long)), diff(range(lat)) ) / sqrt(length(long)) * 10
 
 for (curr_index in 1:num_fold) {
-  print(paste("Now doing index ", curr_index))
   train_index <- which(train_index_all != curr_index)
   long_tr <- long[train_index]
   lat_tr <- lat[train_index]
   y_tr <- y[train_index]
   coords <- cbind(long_tr, lat_tr)
   
-  non_convex_bdry <- inla.nonconvex.hull(coords, -0.03, resolution = c(100, 100))
+  print("Building mesh . . .")
+  
+  non_convex_bdry <- inla.nonconvex.hull(coords, -0.3, resolution = c(100, 100))
   mesh4 <- inla.mesh.2d(boundary = non_convex_bdry, max.edge=c(inla_range, inla_range*2))
   
   
@@ -435,13 +486,15 @@ for (curr_index in 1:num_fold) {
   
   
   formula0<- y ~ -1 + long + lat + f(spatial.field, model=spde) 
-  
+ 
+  print("Fitting model . . .")
+   
   model0<-inla(formula0, #the formula
                data=inla.stack.data(stk,spde=spde),  #the data stack
                family= 'gaussian',   #which family the data comes from
                control.predictor=list(A=inla.stack.A(stk),compute=TRUE),  #compute gives you the marginals of the linear predictor
                control.compute = list(dic = TRUE, waic = TRUE, config = TRUE, return.marginals.predictor = TRUE), #model diagnostics and config = TRUE gives you the GMRF
-                control.inla= list(strategy = 'simplified.laplace', huge = TRUE),
+               control.inla = list(strategy = 'simplified.laplace', huge = TRUE),
                verbose = FALSE) #can include verbose=TRUE to see the log of the model runs
   
   
@@ -470,12 +523,12 @@ for (curr_index in 1:num_fold) {
   
   #join the prediction stack with the one for the full data
   stk.full <- inla.stack(stk, stk.pred)
-  
+  print("Making posterior predictions . . .") 
   p.res.pred<-inla(formula0, data=inla.stack.data(stk.full,spde=spde),
                    family= 'gaussian', quantiles = NULL,
                    control.predictor=list(link = 1, A=inla.stack.A(stk.full),compute=TRUE),  #compute gives you the marginals of the linear predictor
                    control.compute = list(config = TRUE), #model diagnostics and config = TRUE gives you the GMRF
-                   control.inla= list(strategy = 'simplified.laplace', huge = TRUE),  #this is to make it run faster
+                   control.inla = list(strategy = 'simplified.laplace', huge = TRUE),  #this is to make it run faster
                    verbose = FALSE) 
   
   index.pred<-inla.stack.index(stk.full, "pred")$data
@@ -483,7 +536,46 @@ for (curr_index in 1:num_fold) {
   # <- inla.posterior.sample(n = num_sample, p.res.pred)
   temp_pos_sample <- inla.posterior.sample(num_sample,p.res.pred)
   pred_inla[-train_index,] <- matrix(sapply(temp_pos_sample, function(lst) lst$latent[index.pred]), ncol = num_sample)
+  loss_inla[curr_index] <- mean((p.res.pred$summary.linear.predictor[index.pred,"mean"] - y_te)^2)
 }
+
+
+# 
+# 
+# Prediction for grid
+Aprediction <- inla.spde.make.A(mesh = mesh4, loc = cbind(s_long,s_lat));
+
+stk.pred <- inla.stack(data=list(y=NA),
+                       A=list(Aprediction,1),
+                       effects=list(c(list(Intercept=1)
+                                      ,iset),
+                                    list(
+                                      long = s_long,
+                                      lat = s_lat
+                                    )
+                       ),
+                       tag='pred')
+
+#join the prediction stack with the one for the full data
+stk.full <- inla.stack(stk, stk.pred)
+
+p.res.pred<-inla(formula0, data=inla.stack.data(stk.full,spde=spde),
+                 family= 'gaussian', quantiles = NULL,
+                 control.predictor=list(link = 1, A=inla.stack.A(stk.full),compute=TRUE),  #compute gives you the marginals of the linear predictor
+                 control.compute = list(config = TRUE), #model diagnostics and config = TRUE gives you the GMRF
+                 control.inla(strategy = 'simplified.laplace', huge = TRUE),  #this is to make it run faster
+                 verbose = FALSE)
+
+index.pred<-inla.stack.index(stk.full, "pred")$data
+
+# <- inla.posterior.sample(n = num_sample, p.res.pred)
+temp_pos_sample <- inla.posterior.sample(num_sample,p.res.pred)
+pred_inla_g <- matrix(sapply(temp_pos_sample, function(lst) lst$latent[index.pred]), ncol = num_sample)
+
+
+
+
+
 
 
 
@@ -491,11 +583,20 @@ for (curr_index in 1:num_fold) {
 
 
 
+
 ```{r}
-write.csv(as.data.frame(pred_dnn),here::here("D:/77/Reasearch/temp/sat_pred/dnn_pred_sat.csv"),row.names = FALSE)
-write.csv(as.data.frame(pred_dk),here::here("D:/77/Reasearch/temp/sat_pred/dk_pred_sat.csv"),row.names = FALSE)
-write.csv(as.data.frame(pred_ck),here::here("D:/77/Reasearch/temp/sat_pred/ck_pred_sat.csv"),row.names = FALSE)
-write.csv(as.data.frame(pred_inla),here::here("D:/77/Reasearch/temp/sat_pred/inla_pred_sat.csv"),row.names = FALSE)
+
+write.csv(as.data.frame(pred_dnn),"D:/77/Research/temp/sat_pred/dnn_pred_sat.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_dk),"D:/77/Research/temp/sat_pred/dk_pred_sat.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_ck),"D:/77/Research/temp/sat_pred/ck_pred_sat.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_inla),"D:/77/Research/temp/sat_pred/inla_pred_sat.csv",row.names = FALSE)
+
+
+write.csv(as.data.frame(pred_dnn_g),"D:/77/Reasearch/temp/sat_pred/dnn_pred_sat_g.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_dk_g),"D:/77/Reasearch/temp/sat_pred/dk_pred_sat_g.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_ck_g),"D:/77/Reasearch/temp/sat_pred/ck_pred_sat_g.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_inla_g),"D:/77/Reasearch/temp/sat_pred/inla_pred_sat_g.csv",row.names = FALSE)
+
 
 
 ```
