--- a/other_dataset/mra_reproduce/MRA_Application.Rmd
+++ b/other_dataset/mra_reproduce/MRA_Application.Rmd
@@ -535,7 +535,7 @@ for (curr_index in 1:num_fold) {
 # 
 # 
 # Prediction for grid
-Aprediction <- inla.spde.make.A(mesh = mesh4, loc = cbind((g_long- min(long))/diff(range(long)), (g_lat - min(lat))/diff(range(lat))));
+Aprediction <- inla.spde.make.A(mesh = mesh4, loc = cbind((g_long- min(long))/diff(range(long)), (g_lat - min(lat))/diff(range(lat))))
 
 stk.pred <- inla.stack(data=list(y=NA),
                        A=list(Aprediction,1),
